err/aiohttp-debugger.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp_debugger'...
Compiling './lib/python3.5/site-packages/aiohttp_debugger/action.py'...
***   File "./lib/python3.5/site-packages/aiohttp_debugger/action.py", line 40
    ('/_debugger/static', f'{debugger_dir}/static'),
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aiohttp_debugger/debugger.py'...
***   File "./lib/python3.5/site-packages/aiohttp_debugger/debugger.py", line 32
    aiohttp_jinja2.setup(application, loader=FileSystemLoader(f"{action.debugger_dir}/static"))
                                                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aiohttp_debugger/endpoint.py'...
***   File "./lib/python3.5/site-packages/aiohttp_debugger/endpoint.py", line 120
    log.info(f"will off for debugger handlers - {self._debugger.subscribers_len}")
                                                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aiohttp_debugger/helper.py'...
***   File "./lib/python3.5/site-packages/aiohttp_debugger/helper.py", line 106
    return f"<{self.endpoint}>"
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/aiohttp_debugger/static'...
Listing './lib/python3.5/site-packages/aiohttp_debugger/static/bundle'...
Listing './lib/python3.5/site-packages/aiohttp_debugger/static/bundle/font-awesome'...
Listing './lib/python3.5/site-packages/aiohttp_debugger/static/bundle/font-awesome/css'...
Listing './lib/python3.5/site-packages/aiohttp_debugger/static/bundle/font-awesome/fonts'...
Listing './lib/python3.5/site-packages/aiohttp_debugger-2.0.9.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp_jinja2'...
Listing './lib/python3.5/site-packages/aiohttp_jinja2-0.14.0.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ujson-1.35.egg-info'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
